syntax = "proto3";

package crand;
option go_package = "github.com/filecoin-project/lotus/cmd/crand/pb";

service Crand {
  rpc GetRandomness (RandomnessRequest) returns (RandomnessReply) {}
  rpc GetInfo (InfoRequest) returns (InfoReply) {}
}

message RandomnessRequest {
  uint64 round = 1;
}

// The response message containing randomness
message RandomnessReply {
  bytes randomness = 1;
  uint64 round = 2;
}

message InfoRequest {
}
message InfoReply {
  bytes pubkey = 1;
  int64 genesis_ts = 2;
  int64 round = 3;
}
